--- a/src/styles/auth/LoginForm.css
+++ b/src/styles/auth/LoginForm.css
@@ -1,4 +1,4 @@
-.login-container {
+.login-form {
     display: flex;
     flex-direction: column;
 
@@ -7,7 +7,7 @@
 
 }
 
-input {
+.login-form input {
     display: block;
 
     width: 100%;
@@ -26,9 +26,4 @@ input {
 
 .submit-btn {
     background: #888888;
-}
-
-
-@media screen and (max-width:767px) {
-    /* 모바일 */
 }
